--- a/src/components/head/index.scss
+++ b/src/components/head/index.scss
@@ -1,12 +1,29 @@
 .header-wrap{
+    overflow: hidden;
     display: flex;
-    align-items: center;
+    flex-direction: column;
     width: 100%;
-    height: 50px;
-    border-bottom: 1px solid #ddd;
+    height: 320px;
+    align-items: center;
 }
-.header-prompt{
-    font-size: 24px;
-    color: #333;
-    padding-left: 20px;
+.header-logo{
+    margin-top: 60px;
+    display: block;
+    width: 100px;
+    height: 100px;
+    img{
+        display: block;
+        width: 100%;
+        height: 100%;
+    }
+}
+.header-title{
+    font-size: 36px;
+    color: #ffffff;
+    line-height: 50px;
+}
+.header-sub-title{
+    font-size: 14px;
+    margin-top: 10px;
+    color: #f2f2f2;
 }
