--- a/src/components/NavBar/index.scss
+++ b/src/components/NavBar/index.scss
@@ -1,7 +1,12 @@
 
 .nav-bar{
   a{
+    color: #999;
     display: inline-block;
     margin: 0 20px;
+    font-size: 14px;
+    &.active{
+      color: blue;
+    }
   }
 }
